<resources>
    <string name="app_name">LoadApp</string>
    <string name="app_description">Download files from Internet</string>
    <string name="action_settings">Settings</string>

    <string name="radio_glide_text">Glide - Image Loading Library by BumpTech</string>
    <string name="radio_load_app_text">LoadApp - Current repository by Udacity</string>
    <string name="radio_retrofit_text">Retrofit - Type-safe HTTP client for Android and Java by Square, Inc</string>

    <string name="notification_title">Udacity: Android Kotlin Nanodegree </string>
    <string name="notification_description">The Project 3 repository is downloaded</string>
    <string name="notification_button">See changes</string>

    <string name="button_name">Download</string>
    <string name="button_loading">We are loading </string>
    <string name="button_complete">Download complete</string>
    <string name="title_activity_detail">DetailActivity</string>
    <string name="select_project">Please select a project before clicking to download</string>

    <string name="notification_channel_id" translatable="false">download channel</string>
    <string name="notification_channel_name">Download</string>
    <string name="download_success">Success</string>
    <string name="download_failed">Fail</string>
    <string name="see_details">Open to see details</string>
    <string name="filename_label">File Name:</string>
    <string name="status_label">Status:</string>
    <string name="swipe_instructions">Swipe right to see the details</string>
    <string name="back_button_text">Back to main screen</string>
</resources>
