<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".MainActivity"
    tools:showIn="@layout/activity_main">

    <ImageView
        android:id="@+id/download_image"
        android:layout_width="match_parent"
        android:layout_height="240dp"
        android:layout_margin="16dp"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@drawable/cloud_download"
        android:backgroundTint="@color/colorPrimary"
        />

    <RadioGroup
        android:id="@+id/radio_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/download_image"
        android:layout_margin="@dimen/radio_margin">
        <RadioButton
            android:id="@+id/radio_glide"
            style="@style/RadioButton"
            android:text="@string/radio_glide_text" />
        <RadioButton
            android:id="@+id/radio_load_app"
            style="@style/RadioButton"
            android:text="@string/radio_load_app_text" />
        <RadioButton
            android:id="@+id/radio_retrofit"
            style="@style/RadioButton"
            android:text="@string/radio_retrofit_text" />
    </RadioGroup>

    <com.udacity.LoadingButton
        android:id="@+id/custom_button"
        android:layout_width="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_height="60dp"
        android:layout_margin="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/radio_group"
        app:buttonColor1="@color/colorPrimary"
        app:buttonColor2="@color/colorPrimaryDark" />

</androidx.constraintlayout.widget.ConstraintLayout>